Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Cycle2.out
Cycle2.java:13:9: compiler.err.cyclic.annotation.element: cycle2.Bar
1 error
